Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -74,7 +74,6 @@ body.edit { /* border for logo on editor */
         }
         ul {
             display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 0;
